--- a/coupons-service/src/main/resources/templates/index.html
+++ b/coupons-service/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<a href="/showCreateCoupon">Create Coupon</a><br/>
-	<a href="/showGetCoupon">Get Coupon</a>
-	
+	<a href="/showGetCoupon">Get Coupon</a><br/>
+	<a href="/logout">Logout</a>
 	doug@bailey.com
 	doug
 	
